@@ -1,3 +1,10 @@
+2001-08-27  Sam Steingold  <sds@gnu.org>
+
+	fixed bug #455559
+	* defstruct.lisp (ds-arg-default): when ARG is a list and default
+	is NIL, return (ARG NIL) and not (ARG)
+	(ds-arg-with-default): pass VAR instead of ARG to DS-ARG-DEFAULT
+
 2001-08-25  Bruno Haible  <haible@clisp.cons.org>
 
 	Upgrade to autoconf-2.52.
